:sparkles: agrega la funcionalidad de agregar los cursos a los docentes

--- a/apps/templates/base_partials/base_login.html
+++ b/apps/templates/base_partials/base_login.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="{% static 'vendor/select2/css/select2.min.css' %}">
   <link rel="stylesheet" href="{% static 'vendor/select2/css/select2-bootstrap.min.css' %}">
   {% block css %}{% endblock css %}
-  <title>Sis_capacitaciones</title>
+  <title>UNASAM - Legajos</title>
 </head>
 <body class="bodyLogin">
   <header>
