:recycle: Refactoriza el codigo de crear y editar colegiatura de docente

--- a/apps/templates/persona/crear.html
+++ b/apps/templates/persona/crear.html
@@ -140,16 +140,16 @@
             <legend class="scheduler-border" style="width: 120px!important; font-size:12px;"> Datos de Colegiatura</legend>
             <div class="row center-block">
                  <div class="col-lg-12">
-                     {% field form_datos_colegiatura.colegio_profesional cols=True label=True %}
+                     {% field form_datos_colegiatura.colegio_profesional label=True %}
                  </div>
                  <div class="col-lg-6">
-                    {% field form_datos_colegiatura.sede_colegio cols=True label=True %}
+                    {% field form_datos_colegiatura.sede_colegio label=True %}
                  </div>
                  <div class="col-lg-3">
-                    {% field form_datos_colegiatura.codigo_colegiado cols=True label=True %}
+                    {% field form_datos_colegiatura.codigo_colegiado label=True %}
                  </div>
                  <div class="col-lg-3">
-                    {% field form_datos_colegiatura.estado_colegiado cols=True label=True %}
+                    {% field form_datos_colegiatura.estado_colegiado label=True %}
                  </div>
             </div>
         </fieldset>
