--- a/apps/templates/persona/crear.html
+++ b/apps/templates/persona/crear.html
@@ -40,8 +40,7 @@
         </div>
         <fieldset class="border p-2">
           <legend class="scheduler-border" style="width: 110px!important; font-size:12px;"> Datos de la Persona</legend>
-          <div class="col-lg-2">
-            <label style="font-size:11px;">Fotografía (formato png, jpeg, o jpg<=100Kb)</label>
+          <div class="col-lg-2 d-flex flex-column">
             {% if object.ruta_foto %}
             <img src="{{MEDIA_URL}}{{object.ruta_foto}}" class="img-fluid border shadow-sm" alt="personal"
                  style="margin-left: auto; margin-right: auto; width: 100%; display: block;"/>
@@ -50,6 +49,9 @@
                    style="margin-left: auto; margin-right: auto; width: 100%; display: block;"/>
             {% endif %}
             {% field form.ruta_foto cols=False label=False label_width=0 %}
+          <div class="bg-warning text-center border shadow-sm">
+              <label style="font-size:12px;" class="p-8 white">Formato png, jpeg, o jpg menor a 100Kb</label>
+          </div>
           </div>
           <div class="col-md-10">
             <div class="col-md-12">
