:rocket: Permite subir fotografia de persona  hasta 2.4 MB

--- a/apps/templates/persona/crear.html
+++ b/apps/templates/persona/crear.html
@@ -50,7 +50,7 @@
             {% endif %}
             {% field form.ruta_foto cols=False label=False label_width=0 %}
           <div class="bg-warning text-center border shadow-sm">
-              <label style="font-size:12px;" class="p-8 white">Formato png, jpeg, o jpg menor a 100Kb</label>
+              <label style="font-size:12px;" class="p-8 white">Formato png, jpeg, o jpg menor a 2MB</label>
           </div>
           </div>
           <div class="col-md-10">
