:zap: agrega boton para descargar CV detallado

--- a/apps/templates/persona/exportar_cv.html
+++ b/apps/templates/persona/exportar_cv.html
@@ -54,7 +54,12 @@
           <div class="col-lg-12" align="">
             <button type="button" class="btn btn-primary btn-sm" id="btn-descarga-cv" data-id="{{persona.id}}">
               <i class="fa fa-download"></i>
-              DESCARGAR CV
+              &nbsp;DESCARGAR CV SIMPLE
+            </button>
+            <span>&nbsp;&nbsp;&nbsp;</span>
+            <button type="button" class="btn btn-success btn-sm" id="btn-descarga-cv-det" data-id="{{persona.id}}">
+              <i class="fa fa-download"></i>
+              &nbsp;DESCARGAR CV DETALLADO
             </button>
             <br><br>
           </div>
