:sparkles: Agrega opciones de navegación en navbar para usuario diferente a admin

--- a/apps/templates/base_partials/_nav.html
+++ b/apps/templates/base_partials/_nav.html
@@ -21,12 +21,103 @@
      <li>
         <a href="/editar-persona/{{ identificador_persona }}">
           <div class="col-lg-3 col-md-3 col-xs-3">
-          <i class="fa fa-users"></i>
+          <i class="fa fa-file"></i>
           </div>
           <div class="col-lg-7 col-md-7 col-xs-7">
             <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
                class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
               Mi información
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/experiencia/experiencia-laboral/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-briefcase"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Experiancia laboral
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/formacion/formacion-academica/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-graduation-cap"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Formación académica
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/idioma/crear/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-flag"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Idioma
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/produccion/cientifica/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-search"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Producción científica
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/distincion/distincion-premio/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-trophy"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Distinción y premio
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/cursos/agregar-cursos/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-book"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Cursos dictados
+            <p>
+          </div>
+        </a>
+      </li>
+     <li>
+        <a href="/exportar-cv/{{ identificador_persona }}">
+          <div class="col-lg-3 col-md-3 col-xs-3">
+          <i class="fa fa-file-text"></i>
+          </div>
+          <div class="col-lg-7 col-md-7 col-xs-7">
+            <p data-toggle="tooltip" title="Mi información" data-placement="bottom"
+               class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
+              Curriculum vitae
             <p>
           </div>
         </a>
