:art: remueve el enlace a /inicio al pulsar en el escudo de la Unasam

--- a/apps/templates/base_partials/_head.html
+++ b/apps/templates/base_partials/_head.html
@@ -2,8 +2,8 @@
 <nav class="navbar no-print" xmlns:p.punto_vacunacion.id>
   <div class="container-fluid">
     <div class="navbar-header">
-      <div class="logo-box"><a href="/">
-        <img src="{% static 'img/logo-unasam.png' %}" class="logo-peque center-block"></a>
+      <div class="logo-box">
+        <img src="{% static 'img/logo-unasam.png' %}" class="logo-peque center-block">
       </div>
     </div>
     <button class="navbar-toggle collapse in  no-padding " data-toggle="collapse" id="menu-toggle-3"><span
