:art: Cambia el mensaje de la pagina de inicio

--- a/apps/templates/login/inicio.html
+++ b/apps/templates/login/inicio.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block container %}
-<label class="text-dark">Inicio</label>
+    <br>
+    <div class="jumbotron">
+      <h1>
+          Bienvenido al
+          <span class="text-info">Sistema de Legajos Unasam</span>
+      </h1>
+      <p class="lead">Explore las funcionalidades en la barra de navegación izquierda.</p>
+    </div>
 {% endblock %}
