:lipstick: cambia las clases del jumbotron en /inicio

--- a/apps/templates/login/inicio.html
+++ b/apps/templates/login/inicio.html
@@ -3,10 +3,11 @@
 {% block container %}
     <br>
     <div class="jumbotron">
-      <h1>
+      <h2 class="text-dark">
           Bienvenido al
           <span class="text-info">Sistema de Legajos Unasam</span>
-      </h1>
-      <p class="lead">Explore las funcionalidades en la barra de navegación izquierda.</p>
+      </h2>
+        <hr>
+      <p class="text-secondary">Explore las funcionalidades en la barra de navegación izquierda.</p>
     </div>
 {% endblock %}
